src/test/ui/traits/trait-upcasting/unsafe-trait-upcasting-coercion2.stderr
error[E0308]: mismatched types
  --> $DIR/unsafe-trait-upcasting-coercion2.rs:25:33
   |
LL |     let g: * const Box<dyn A> = v;
   |            ------------------   ^ expected trait `A`, found trait `C`
   |            |
   |            expected due to this
   |
   = note: expected raw pointer `*const Box<dyn A>`
              found raw pointer `*const Box<(dyn C + 'static)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
